cw-orch/src/snapshots/cw_orch__snapshots__tests__contract0.snap
---
source: cw-orch/src/snapshots.rs
expression: chain.app.borrow().dump_wasm_raw(&contract_addr)
---
- - - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 95
    - 105
    - 110
    - 102
    - 111
  - - 123
    - 34
    - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 34
    - 58
    - 34
    - 99
    - 114
    - 97
    - 116
    - 101
    - 115
    - 46
    - 105
    - 111
    - 58
    - 99
    - 111
    - 117
    - 110
    - 116
    - 101
    - 114
    - 34
    - 44
    - 34
    - 118
    - 101
    - 114
    - 115
    - 105
    - 111
    - 110
    - 34
    - 58
    - 34
    - 48
    - 46
    - 49
    - 49
    - 46
    - 48
    - 34
    - 125
- - - 115
    - 116
    - 97
    - 116
    - 101
  - - 123
    - 34
    - 99
    - 111
    - 117
    - 110
    - 116
    - 34
    - 58
    - 49
    - 44
    - 34
    - 111
    - 119
    - 110
    - 101
    - 114
    - 34
    - 58
    - 34
    - 115
    - 101
    - 110
    - 100
    - 101
    - 114
    - 34
    - 125

