cw-orch/src/snapshots/cw_orch__snapshots__tests__multiple_contracts_snapshot_test.snap
---
source: cw-orch/src/snapshots.rs
expression: all_storage
snapshot_kind: text
---
counter_contract:
  - - contract_info
    - "{\"contract\":\"crates.io:counter\",\"version\":\"0.27.1\"}"
  - - state
    - "{\"count\":1,\"owner\":\"cosmwasm1pgm8hyk0pvphmlvfjc8wsvk4daluz5tgrw6pu5mfpemk74uxnx9qlm3aqg\"}"
second-counter-contract:
  - - contract_info
    - "{\"contract\":\"crates.io:counter\",\"version\":\"0.27.1\"}"
  - - state
    - "{\"count\":4,\"owner\":\"cosmwasm1pgm8hyk0pvphmlvfjc8wsvk4daluz5tgrw6pu5mfpemk74uxnx9qlm3aqg\"}"
third-counter-contract:
  - - contract_info
    - "{\"contract\":\"crates.io:counter\",\"version\":\"0.27.1\"}"
  - - state
    - "{\"count\":3,\"owner\":\"cosmwasm1pgm8hyk0pvphmlvfjc8wsvk4daluz5tgrw6pu5mfpemk74uxnx9qlm3aqg\"}"
